style: add & adjust style for dropdown components

--- a/src/Dropdown/Dropdown.css
+++ b/src/Dropdown/Dropdown.css
@@ -1,4 +1,4 @@
-.Dropdown {
+/* .Dropdown {
     position: absolute;
     overflow: hidden;
     padding: 1rem;
@@ -7,5 +7,5 @@
     transform: translateX(-45%);
     border: var(--border);
     border-radius:8px;
-    background-color: black;
-}
+    background-color: red;
+} */
